--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<main style="background-image: url('{{ asset("croixGrey.png") }}');">
 <div id="faArrow" class="text-center">
     <i class="fa-solid fa-circle-arrow-down fa-bounce" style="color: #000000 #ffffff; font-size: 2.5rem;"></i>
 </div>
@@ -78,7 +79,7 @@
         </div>           
 </section>
 
-<section class="grid_gallery" style="background-image: url('{{ asset("croixGrey.png") }}');">
+<section class="grid_gallery">
     <h2 class="text-center pt-5 fw-bolder">Nos actualités</h2>
     <div class="container">
         <div class="row justify-content-center">
@@ -134,9 +135,9 @@
     
     <iframe id="mobile_iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110347!2d4.652024377356847!3d46.438037267937126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1690210543131!5m2!1sfr!2sfr" width="600" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
+</main>
 
 
-<!-- Supprimez l'ancien script -->
 <script>
   document.addEventListener("DOMContentLoaded", function() {
     // Sélectionnez les éléments
