--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -4,14 +4,14 @@
     <h1 class="titles_top fst-italic fw-bolder text-center">Nous rejoindre</h1>
 
     <div class="container-fluid pt-5 pb-5">
-        <div class="row content">
+        <div class="row content fade-in-up" id="join_form">
             <div class="col-lg-6 mt-5 sub_content text-center">
                 <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 04 87</a><br>
                 <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 77 65 87 74</a><br>
                 <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
             </div>
 
-            <div class="col-lg-6 mt-5 sub_content" id="join_form">
+            <div class="col-lg-6 mt-5 sub_content">
                 <h2 class="text-center">Formulaire de recrutement</h2>
                 {{ form_start(formulaire) }}
                     <div>
@@ -48,7 +48,7 @@
 {% for posts in post %}
     {% if counter is divisible by(2) %}
         <div class="container-fluid pt-5 pb-5">
-            <div class="row content">
+            <div class="row content fade-in-up" id="join_post">
                 <div class="col-lg-12 sub_content">
                     <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
                     {% if posts.mediaUrl is not null %}
@@ -74,6 +74,16 @@
     {% set counter = counter + 1 %}
 {% endfor %}
 
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        // Sélectionnez les éléments
+        const join_post = document.getElementById("join_post");
+        const join_form = document.getElementById("join_form");
 
+        // Ajoutez une classe pour déclencher les animations fadeIn
+        join_post.classList.add("animate-fade-in-up");
+        join_form.classList.add("animate-fade-in-up");
+    });
+</script>
 </section>
 {% endblock %}
