--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -14,8 +14,8 @@
                 <div id="title_desc" class="d-flex flex-column justify-content-center align-items-center fade-in-left">
                     <h1 class="fst-italic">La Clunysoise</h1>
                     <div class="row">
-                        <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">45 </span><br> Urgences par jour</span>
-                        <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">421 </span><br> Interventions</span>
+                        <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">45 </span><br> Urgences / jour</span>
+                        <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">421 </span><br> Interventions / jour</span>
                         <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">28 </span><br> Salarié</span>
                     </div>
                     <p class="text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
