--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -3,7 +3,7 @@
 <section class="pages_section" style="background-image: url('{{ asset("croix-rouge.png") }}');">
     <h1 class="titles_top fst-italic fw-bolder text-center">Notre identité</h1>
 
-    <div class="container-fluid fade-in-up pt-5 pb-5" id="about_desc">
+    <div class="container-fluid fade-in-up" id="about_desc">
         <div class="content">
             <div class="row col-lg-12 sub_content">
                 <div class="col-12">
