--- a/assets/styles/_!home.scss
+++ b/assets/styles/_!home.scss
@@ -1,5 +1,4 @@
 #about_desc {
-    margin-top : 290px !important;
     max-width: 80vw !important;
     border-radius: 20px !important;
 }
@@ -18,7 +17,7 @@ small {
 }
 
 .pages_section {
-    margin-top:200px;
+    padding-top:200px;
     background-size:contain;
     background-repeat: no-repeat;
     background-position: center center;
