update button mobile

--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -197,8 +197,8 @@ main {
         display: none;
     }
 
-    #buttons button {
-        margin: 40px 380px!important;
+    #buttons_container button {
+        width: 100% !important;
     }
 
     #faArrow i  {
