--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -25,7 +25,8 @@
                             <div class="col-lg-6 ps-3 pe-3">{{ form_row(formulaire.email) }}</div>
                         </div>
                     </div>
-                    {{ form_row(formulaire.content) }}
+                    <div class="ps-3 pe-3">{{ form_row(formulaire.content) }}</div>
+                    
                     <div class="row form-group pt-3">
                         <div class="col-lg-12 pe-3 ps-3">
                             <label>Téléchargez votre C.V ci-dessous</label>
