--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -4,7 +4,7 @@
     <footer class="row py-5 my-5 border-top justify-content-center" id="footer">
 
         <div class="col-lg-4 mb-3 pCol">
-            <img id="logo" src="{{ asset('footerLogo.png') }}">
+            <img id="logo" class="pb-3" src="{{ asset('footerLogo.png') }}">
             <br>
             <p class="nav-item mb-2"><a target="_blank" href="geo:46.437944,4.654481?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 mt-3 text-body-secondary">7 Avn.Pierre le Vénérable, 71250 Cluny</a></p><br>
             <p class="text-body-secondary">&copy; 2023</p>
