--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("croix-rouge.png") }}');">
+<section class="pages_section" style="background-image: url('{{ asset("croixGrey.png") }}');">
     <h1 class="titles_top fst-italic fw-bolder text-center">Notre identité</h1>
 
-    <div class="container-fluid fade-in-up" id="about_desc">
+    <div class="container-fluid fade-in-up pb-5" id="about_desc">
         <div class="content">
             <div class="row col-lg-12 sub_content">
                 <div class="col-12">
@@ -13,25 +13,25 @@
                     <p>Sur chacune de nos prestations et nos véhicules, nous garantissons :</p>
                 </div>
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                    <i aria-hidden="true" class="fas fa-snowflake" id="about_i"></i>
+                    <i aria-hidden="true" class="fas fa-snowflake pb-2" id="about_i"></i>
                     <h4>Le confort et l’hygiène :</h4>
                     <p>nos ambulances sont climatisées, issues de la dernière génération et désinfectées quotidiennement.</p>
                 </div>
 
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                    <i aria-hidden="true" class="fas fa-user-nurse" id="about_i"></i>
+                    <i aria-hidden="true" class="fas fa-user-nurse pb-2" id="about_i"></i>
                     <h4>Le professionnalisme :</h4>
                     <p>nos ambulanciers et chauffeur sont tous diplômés d’État et mettront leur savoir-faire à votre disposition.</p>
                 </div>
 
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                    <i aria-hidden="true" class="fas fa-shield-virus" id="about_i"></i>
+                    <i aria-hidden="true" class="fas fa-shield-virus pb-2" id="about_i"></i>
                     <h4>La sécurité :</h4>
                     <p>nos véhicules sont équipés d’oxygène ainsi que du matériel de premier secours et de réanimation dernier cri. De plus, nous disposons de bonne humeur à bord.</p>
                 </div>
 
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                    <i aria-hidden="true" class="fas fa-stopwatch" id="about_i"></i>
+                    <i aria-hidden="true" class="fas fa-stopwatch pb-2" id="about_i"></i>
                     <h4>Une intervention 7j/7 et 24h/24 :</h4>
                     <p>nos véhicules sont disponible tous les jours à n'importe quel moment.</p>
                 </div>
