--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <section class="pages_section" style="background-image: url('{{ asset("croixGrey.png") }}');">
     <h1 class="titles_top fst-italic fw-bolder text-center">Vos rendez-vous</h1>
-    <div class="container container-fluid pt-5 pb-5">
+    <div class="container container-fluid pb-5">
         <div class="row row content">
 
             <div class="col-lg-12 sub_content">
