--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("croix-rouge.png") }}');">
+<section class="pages_section" style="background-image: url('{{ asset("croixGrey.png") }}');">
     <h1 class="titles_top fst-italic fw-bolder text-center">Notre identité</h1>
 
     <div class="container-fluid fade-in-up" id="about_desc">
