--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -32,7 +32,7 @@
                     <div class="row">
                         <div class="col-lg-4 pe-3 ps-3 pb-2"><label class="fs-4">Date du rendez-vous *</label>{{ form_row(formulaire.DateRendezVous) }}</div>
                         <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Heure du rendez-vous *</label>{{ form_row(formulaire.HeureRendezVous) }}</div>
-                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Durée estimée *</label>{{ form_row(formulaire.DureeEstimee) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Durée estimée</label>{{ form_row(formulaire.DureeEstimee) }}</div>
                     </div>
 
                     <div class="row">
