--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -7,6 +7,12 @@
 
             <div class="col-lg-12 sub_content">
 
+                {% for flashMessage in app.flashes('danger') %}
+                    <div class="alert alert-danger m-5">
+                        {{ flashMessage }}
+                    </div>
+                {% endfor %}
+
                 {% for flashMessage in app.flashes('success') %}
                     <div class="alert alert-success m-5">{{ flashMessage }}</div>
                 {% endfor %}
