update front contact

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -16,7 +16,7 @@
                         <div class="row">
                             <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">45 </span><br> Urgences / jour</span>
                             <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">421 </span><br> Interventions / jour</span>
-                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">28 </span><br> Salarié</span>
+                            <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">25 </span><br> Salariés</span>
                         </div>
                         <p class="text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
                     </div>
@@ -70,7 +70,7 @@
                                 <span class="countText fw-bold d-block text-black"><span class="count fw-bold">10 </span><br> VSL</span>
                             </div>
                             <div class="carousel-item" data-bs-interval="2500">
-                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">8 </span><br> Taxi</span>
+                                <span class="countText fw-bold d-block text-black"><span class="count fw-bold">8 </span><br> Taxis</span>
                             </div>
                         </div>
                     </div>
