--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,4 +1,4 @@
-{% block footer %}
+{% block header %}
 <a href="/"><img src="{{ asset('logo2.png') }}" id="logoHead"></a>
 <nav class="navbar fixed-top" aria-label="Light offcanvas navbar">
     <div class="container-fluid g-0">
