--- a/assets/app.scss
+++ b/assets/app.scss
@@ -5,6 +5,7 @@
 @import "assets/styles/_footer.scss";
 @import "assets/styles/_!home.scss";
 @import "assets/styles/_forms.scss";
+@import "assets/styles/_error.scss";
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
