--- a/assets/styles/_!home.scss
+++ b/assets/styles/_!home.scss
@@ -17,7 +17,7 @@ small {
 
 .pages_section {
     padding-top:200px;
-    background-size:contain;
+    background-size:cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -28,7 +28,7 @@ small {
 }
 
 .content {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.70);
     width: 100%;
     height: auto !important;
     border-radius: 20px !important;
