--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>{% block title %}Ambulance La Clynysoise{% endblock %}</title>
         <link rel="icon" type="image/svg" href="{{ asset('favicon.svg') }}"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,13 +21,6 @@
         {{ include("header.html.twig") }}
         {% block body %}
 
-
-        <script src="{{ asset('path/to/tinymce/tinymce.min.js') }}"></script>
-        <script>
-            tinymce.init({
-                selector: '.tinymce',
-            });
-        </script>
         {% endblock %}
         {{ include("footer.html.twig") }}
     </body>
