--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,18 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<main style="background-image: url('{{ asset("croixGrey.png") }}');">
+<main style="background-image: url('{{ asset("background.png") }}');">
     <div id="faArrow" class="text-center">
         <i class="fa-solid fa-circle-arrow-down fa-bounce" style="color: #000000 #ffffff; font-size: 2.5rem;"></i>
     </div>
-
     <section class="container d-flex" id="home">
         <div class="row">
             <div class="col-lg-6 d-flex justify-content-center align-items-center" id="home_description">
                 <div>
                     <div id="title_desc" class="d-flex flex-column justify-content-center align-items-center fade-in-left">
                         <h1 class="fst-italic">La Clunysoise</h1>
-                        <div class="row">
+                        <div class="row" id="countContainer">
                             <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">45 </span><br> Urgences / jour</span>
                             <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">421 </span><br> Interventions / jour</span>
                             <span class="col-lg-4 countText fw-bold d-block text-black pe-4 text-center"><span class="count fw-bold">28 </span><br> Salarié</span>
