--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -2,8 +2,7 @@
 
 
 {% block body %}
-
-<section class="pages_section" style="background-image: url('{{ asset('croixGrey.png') }}');">
+<section class="pages_section" style="background-image: url('{{ asset('background.png') }}');">
     <h1 class="titles_top fst-italic fw-bolder text-center">Nos actualités</h1>
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
@@ -17,22 +16,4 @@
         </div>
     </div>
 </section>
-
-
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        // Sélectionnez les éléments
-        
-        const show_img = document.getElementById("show_img");
-        const show_content = document.getElementById("show_content");
-
-        // Ajoutez une classe pour déclencher les animations fadeIn
-
-        show_img.classList.add("animate-fade-in-left");
-        show_content.classList.add("animate-fade-in-right");
-        
-
-    });
-</script>
-
 {% endblock %}
