--- a/templates/main/supportPricing.html.twig
+++ b/templates/main/supportPricing.html.twig
@@ -16,17 +16,19 @@
                 </div>
             </div>
         </div>
-        {% else %}
-        <div class="container-fluid pt-5 pb-5">
-            <div class="row content">
-                <div class="col-lg-12 sub_content">
-                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
-                    {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 img_right" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                </div>
+    </section>
+    {% else %}
+    <div class="container-fluid pt-5 pb-5">
+        <div class="row content">
+            <div class="col-lg-12 sub_content">
+                <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
+                {% if posts.mediaUrl is not null %}
+                <img class="img-fluid rounded-5 img_right" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                {% endif %}
+                <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
             </div>
         </div>
-    </section>
+    </div>
+    {% endif %}
+{% endfor %}
 {% endblock %}
