--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -80,6 +80,10 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-lg-12 d-flex justify-content-center ps-3 pe-3 text-center">
+                        <div class="p-3">{{ form_widget(formulaire.agreement) }}</div>
+                        <div class="p-3">{{ form_label(formulaire.agreement) }}</div>
+                    </div>
                     <div class="col-lg-12 pe-3 ps-3">
                         {{ form_row(formulaire.envoyer) }}
                     </div>
