--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -31,7 +31,11 @@
                     </div>
                     <div class="col-lg-12 ps-3 pe-3">
                         {{ form_row(formulaire.content) }}
-                    </div>      
+                    </div>
+                    <div class="col-lg-12 d-flex justify-content-center ps-3 pe-3">
+                        <div class="p-3">{{ form_widget(formulaire.agreement) }}</div>
+                        <div class="p-3">{{ form_label(formulaire.agreement) }}</div>
+                    </div>
                     <div class="col-lg-12 ps-3 pe-3">
                         {{ form_row(formulaire.envoyer) }}
                     </div>
