--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -130,7 +130,7 @@
     </section>
 
     <h2 class="pb-3 pt-5 text-center fw-bolder">Où nous trouver</h2>
-    <div class="row text-center">
+    <div class="text-center rounded-5">
         <iframe class="rounded-5" id="desktop_iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10998.152493979294!2d4.6545993!3d46.4380336!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689589206519!5m2!1sfr!2sfr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
         <iframe id="mobile_iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110347!2d4.652024377356847!3d46.438037267937126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1690210543131!5m2!1sfr!2sfr" width="600" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
