--- a/assets/styles/_!home.scss
+++ b/assets/styles/_!home.scss
@@ -19,7 +19,7 @@ small {
     padding-top:200px;
     background-size:cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center;
     background-attachment: fixed;
 }
 
