--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("background.png") }}');">
+<section class="pages_section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
     <h1 class="titles_top fst-italic fw-bolder text-center">Contact</h1>
     <div class="container-fluid pt-5 pb-5">
-        <div class="row content">
+        <div class="row content fade-in-up">
             <div class="col-lg-6 mt-5 sub_content text-center">
                 <h2></h2>
                 <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 04 87</a><br>
