--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("background.png") }}');">
+<section class="pages_section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
     <h1 class="titles_top fst-italic fw-bolder text-center">Nous rejoindre</h1>
 
     <div class="container-fluid pt-5 pb-5">
