--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset('background.png') }}');">
+<section class="pages_section" style="background-image: url('{{ asset('background.png') }}'); background-size: cover;">
     <h1 class="titles_top fst-italic fw-bolder text-center">Nos actualités</h1>
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
