--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("background.png") }}');">
+<section class="pages_section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
     <h1 class="titles_top fst-italic fw-bolder text-center">Vos rendez-vous</h1>
     <div class="container container-fluid pb-5">
-        <div class="row row content">
+        <div class="row content fade-in-up">
 
             <div class="col-lg-12 sub_content">
 
