--- a/templates/main/supportPricing.html.twig
+++ b/templates/main/supportPricing.html.twig
@@ -3,7 +3,7 @@
 {% set counter = 0 %}
 {% for posts in post %}
     {% if counter is divisible by(2) %}
-    <section class="pages_section" style="background-image: url('{{ asset("background.png") }}');">
+    <div class="pages_section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
         <h1 class="titles_top fst-italic fw-bolder text-center">Prise en charge - Tarification</h1>
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     {% else %}
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
