--- a/assets/styles/_forms.scss
+++ b/assets/styles/_forms.scss
@@ -36,7 +36,7 @@
     height: auto !important;
 }
 
-#contact_envoyer, #appointment_envoyer {
+#contact_envoyer, #appointment_envoyer, #join_envoyer {
     --bs-btn-padding-y: 1.4rem !important;
 }
 
