--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -50,7 +50,7 @@
                         {% if posts.mediaUrl is not null %}
                         <img class="img-fluid rounded-5 img_left fade-in-left" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
                         {% endif %}
-                        <div class="fade-in-right" id="about_content">{{ posts.content|raw }}</div>
+                        <div class="fade-in-right">{{ posts.content|raw }}</div>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                         {% if posts.mediaUrl is not null %}
                         <img class="img-fluid rounded-5 img_right fade-in-right" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
                         {% endif %}
-                        <div class="fade-in-right" id="about_content">{{ posts.content|raw }}</div>
+                        <div class="fade-in-right">{{ posts.content|raw }}</div>
                     </div>
                 </div>
             </div>
